[package]
name = "esp8266-nonos-sys"
version = "0.0.0"
edition = "2021"
include = [
    "/include/",
    "/sdk/include/",
    "/sdk/ld/",
    "/sdk/lib/",
    "/src/",
    "/build.rs",
]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true

[build-dependencies]
bindgen = "0.59.2"

[dependencies]
cty = "0.2.2"

[dev-dependencies]
#esp8266-hal = "0.5.0"
panic-halt = "0.2.0"
